terraform/rds.tf
resource "aws_db_subnet_group" "main" {
  name = "database-subnet-group"

  subnet_ids = [
    aws_subnet.private_db_a.id,
    aws_subnet.private_db_b.id
  ]

  tags = merge(
    local.common_tags,
    {
      Name = "Database-Subnet-Group"
    }
  )
}


resource "aws_db_instance" "main" {
  identifier = "three-tier-database"

  allocated_storage = 20

  engine         = "mysql"
  engine_version = "8.0"

  instance_class = "db.t3.micro"

  db_name  = var.db_name
  username = var.db_username
  password = var.db_password

  multi_az = true

  db_subnet_group_name = aws_db_subnet_group.main.name

  vpc_security_group_ids = [
    aws_security_group.rds_sg.id
  ]

  skip_final_snapshot = true

  publicly_accessible = false
}
